# ComfyUI-TranslateGemma

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml  requirements-quantization.txt  requirements.txt
.claude/: settings.local.json
example_workflows/: README.md  basic_text_translation.json  chinese_conversion_only.json  external_text_override_template.json  image_translation_explicit_source.json  long_text_segmented.json
nodes/: __init__.py  translate_node.py
scripts/: audit_languages.py  tg034_structured_truncation_check.py  verify_internal_imports.py
tests/: E2E_TESTING_NOTICE.md  E2E_TESTING_SOP.md  TEST_SOP.md  test_tg015_device_management.py  test_tg021_example_workflows.py  test_tg054_optional_bitsandbytes.py  test_tg055_frontend_help_docs.py
utils/: __init__.py  chinese_convert.py  chinese_postedit.py  context_utils.py  debug_utils.py  image_preprocess.py  language_detect.py  language_utils.py  model_loader.py  prompt_builder.py  runtime_constants.py  template_guard.py  truncation_compat.py
web/docs/: TranslateGemma.md
web/extensions/: translategemma_help.js
