[project]
name = "comfyui-translategemma"
description = "ComfyUI node for TranslateGemma — Google's open source translation models with 55 languages & multimodal image translation."
version = "1.2.3"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [
    "transformers>=4.57.0",
    "accelerate",
    "pillow",
    "langid>=1.1.6",
    "opencc-python-reimplemented",
]

[project.urls]
Repository = "https://github.com/rookiestar28/ComfyUI-TranslateGemma"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/rookiestar28/ComfyUI-TranslateGemma/wiki"
"Bug Tracker" = "https://github.com/rookiestar28/ComfyUI-TranslateGemma/issues"

[tool.comfy]
PublisherId = "rookiestar"
DisplayName = "ComfyUI TranslateGemma"
Icon = ""
includes = [
    "__init__.py",
    "nodes/**",
    "utils/**",
    "web/**",
    "requirements.txt",
    "README.md",
    "LICENSE",
]
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

